--- a/Makefile.Win
+++ b/Makefile.Win
@@ -1,5 +1,5 @@
-SDL_LIB = -LE:/Koodi/SDL2/SDL2-2.0.1/i686-w64-mingw32/lib -lSDL2main -lSDL2
-SDL_INC = -IE:/Koodi/SDL2/SDL2-2.0.1/i686-w64-mingw32/include
+SDL_LIB = -LE:/Koodi/lib/SDL2/SDL2-2.0.1/i686-w64-mingw32/lib -lSDL2main -lSDL2
+SDL_INC = -IE:/Koodi/lib/SDL2/SDL2-2.0.1/i686-w64-mingw32/include
 Z_LIB = -LS:/Programs/MinGW/msys/1.0/local/lib -lz
 Z_INC = -IS:/Programs/MinGW/msys/1.0/local/include
 
