Update for streaming JZFile API

--- a/Makefile.Macos
+++ b/Makefile.Macos
@@ -23,7 +23,7 @@ JPEG_INC = -I$(JPEG_PREFIX)/include
 
 # Compiler settings
 CC = clang
-CFLAGS = -Wall -O3 $(SDL_INC) $(Z_INC) $(PNG_INC) $(JPEG_INC) -arch arm64
+CFLAGS = -Wall -O3 $(SDL_INC) $(Z_INC) $(PNG_INC) $(JPEG_INC) -arch arm64 -DHAVE_ZLIB
 LDFLAGS = $(SDL_LIB) $(PNG_LIB) $(Z_LIB) $(JPEG_LIB) -arch arm64
 OBJECTS = main.o junzip.o image.o font.o
 EXE = jzipview
