--- a/Makefile.Linux
+++ b/Makefile.Linux
@@ -7,7 +7,7 @@ Z_LIB = -lz
 Z_INC =
 
 CC=gcc
-CFLAGS=-Wall -O3 $(SDL_INC) $(Z_INC)
+CFLAGS=-Wall -O3 $(SDL_INC) $(Z_INC) -DHAVE_ZLIB
 LDFLAGS = $(SDL_LIB) -lpng $(Z_LIB) -ljpeg
 OBJECTS=main.o junzip.o image.o font.o
 EXE=jzipview
