--- a/Makefile.Win
+++ b/Makefile.Win
@@ -4,7 +4,7 @@ Z_LIB = -LS:/Programs/MinGW/msys/1.0/local/lib -lz
 Z_INC = -IS:/Programs/MinGW/msys/1.0/local/include
 
 CC=gcc
-CFLAGS=-Wall -mno-ms-bitfields -O3 $(SDL_INC) $(Z_INC)
+CFLAGS=-Wall -mno-ms-bitfields -O3 $(SDL_INC) $(Z_INC) -DHAVE_ZLIB
 # Add -mconsole below if you want
 LDFLAGS = -lmingw32 -mwindows $(SDL_LIB) -lpng $(Z_LIB) -ljpeg
 OBJECTS=main.o junzip.o image.o font.o icon.res
