Use junzip submodule

--- a/Makefile.Linux
+++ b/Makefile.Linux
@@ -7,7 +7,7 @@ Z_LIB = -lz
 Z_INC =
 
 CC=gcc
-CFLAGS=-Wall -O3 $(SDL_INC) $(Z_INC) -DHAVE_ZLIB
+CFLAGS=-Wall -O3 $(SDL_INC) $(Z_INC) -Ijunzip -DHAVE_ZLIB
 LDFLAGS = $(SDL_LIB) -lpng $(Z_LIB) -ljpeg
 OBJECTS=main.o junzip.o image.o font.o
 EXE=jzipview
@@ -32,3 +32,5 @@ $(EXE): $(OBJECTS)
 # Small helpers to make point.hpp inline changes also recompile these files
 image.o: image.c image.h
 font.o: font.c font.h
+junzip.o: junzip/junzip.c junzip/junzip.h
+	$(CC) $(CFLAGS) -c junzip/junzip.c -o junzip.o
