--- a/Makefile.Win
+++ b/Makefile.Win
@@ -4,7 +4,7 @@ Z_LIB = -LS:/Programs/MinGW/msys/1.0/local/lib -lz
 Z_INC = -IS:/Programs/MinGW/msys/1.0/local/include
 
 CC=gcc
-CFLAGS=-Wall -mno-ms-bitfields -O3 $(SDL_INC) $(Z_INC) -DHAVE_ZLIB
+CFLAGS=-Wall -mno-ms-bitfields -O3 $(SDL_INC) $(Z_INC) -Ijunzip -DHAVE_ZLIB
 # Add -mconsole below if you want
 LDFLAGS = -lmingw32 -mwindows $(SDL_LIB) -lpng $(Z_LIB) -ljpeg
 OBJECTS=main.o junzip.o image.o font.o icon.res
@@ -32,4 +32,6 @@ jzipview.exe: $(OBJECTS)
 # Small helpers to make point.hpp inline changes also recompile these files
 image.o: image.c image.h
 font.o: font.c font.h
+junzip.o: junzip/junzip.c junzip/junzip.h
+	$(CC) $(CFLAGS) -c junzip/junzip.c -o junzip.o
 icon.res: icon.ico
